--- a/index.html
+++ b/index.html
@@ -1,1 +1,127 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>The Daily Bite</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link href="styles.css" rel="stylesheet">
+</head>
+<body>
+  <nav class="navbar">
+    <div class="container">
+      <a href="index.html" class="navbar-brand">
+        <img src="./images/logo.svg" alt="The Daily Bite" class="logo" />
+      </a>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="recipes.html">Recipes</a></li>
+        <li><a href="signup.html">Sign Up</a></li>
+      </ul>
+    </div>
+  </nav>
+<h5>Easy recipes to fit your lifestyle. Whether you're a beginner or an experienced cook, our handpicked recipes, tips, and meal plans will inspire you to create culinary masterpieces at home!</h5>
+
+<div class="recipes-section">
+   <a href="recipes.html">
+     <img src="./images/bites.svg" alt="Spicy Honey Garlic Bites"/>
+   </a>
+   <a href="recipes.html">
+
+     <h1>
+        Spicy Honey Garlic Chicken Bites
+     </h1>
+   </a>
+</div>
+<h3> Top Recipes This Week</h3>
+<div class="toprecipes-section">
+  <a href="recipes.html" class="card"><img src="./images/focaccia.svg" alt="focaccia"/><p>Focaccia</p>
+  <a href="recipes.html" class="card"><img src="./images/spicypasta.svg" alt="Spicy Pasta"/><p>Spicy Pasta</p>
+  <a href="recipes.html" class="card"><img src="./images/salad.svg" alt="Fattoush Salad"/><p>Fattoush Salad</p>
+  </a>
+  
+</div>
+
+<h3>National Pancake Day!</h3>
+<div class="pancakes-section">
+    <a href="recipes.html" class="card"><img src="./images/classics.svg" alt="Classic Pancakes"/><p>Classic Pancakes</p>
+    <a href="recipes.html" class="card"><img src="./images/savory.svg" alt="Savory Pancakes"/><p>Savory Pancakes</p>
+    <a href="recipes.html" class="card"><img src="./images/gluten.svg" alt="Gluten-Free Pancakes"/><p>Gluten-Free Pancakes</p>
+    </a>
+</div>
+
+<h1>Reviews</h1>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="reviews-section">
+
+<a class="card">
+  <p> 
+    <img src="./images/tommy.svg" alt="User 1" class="review-photo">
+    <strong>Tommy</strong> <br>
+    "Fantastic recipes. My whole family loved it!" <br>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star"></span>
+    <span class="fa fa-star"></span>
+  </p>
+  </a>
+
+<a class="card">
+  <p> 
+    <img src="./images/lucy.svg" alt="User 2" class="review-photo">
+    <strong>Lucy</strong> <br>
+      "The recipes on here are incredible! I was able to find simple recipes for my busy schedule. Highly recommend for anyone looking to improve their cooking game." <br>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star"></span>
+    </p>
+    </a>
+  
+<a class="card">
+  <p> 
+    <img src="./images/tommy.svg" alt="User 3" class="review-photo">
+    <strong>Liam</strong> <br>
+    "The recipe instructions were clear and I love how the website suggest alternatives for dietary preferences." <br>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+  </p>
+</a> 
+</div>
+<nav class="navbar2">
+  <div class="container2">
+    <a href="index.html" class="navbar-brand">
+      <img src="./images/logo.svg" alt="The Daily Bite" class="logo" />
+    </a>
+    <ul class="nav-links2">
+      <li><a href="#">Send Feedback</a></li>
+      <li><a href="#">Cookies</a></li>
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">Recipes by Ingredients</a></li>
+      <li><a href="#">Terms of Use</a></li>
+      <li><a href="#">Accessibility</a></li>
+      <li><a href="#">Privacy Policy</a></li>
+      <li><a href="#">User Agreement</a></li>
+
+    </ul>
+  </div>
+</nav>
+
+
+
+
+
+
+
+</body>
+</html>
+
+
+
 
